@@ -651,6 +651,8 @@
     <string name="who_sends_messages_to_this_group">Who sends messages to this group?</string>
     <string name="edit_message">Edit message</string>
     <string name="no_data">No data</string>
+    <string name="view_source">View source</string>
+    <string name="this_page_has_no_scripts">This page has no scripts</string>
     <plurals name="drop_x_items">
         <item quantity="one">Drop %1$s item</item>
         <item quantity="other">Drop %1$s items</item>
