@@ -5,6 +5,7 @@
  - See who hosts the group
  - Link previews in messages
  - Edit messages
+ - View script source
 
 0.9.81
 ======
